# RustAuth

./: .gitignore  Cargo.toml
src/: database.rs  hash.rs  main.rs  models.rs  routes.rs  settings.rs
src/database/: database.rs  mod.rs  models.rs
