[package]
name = "rustauth"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.3"
rocket = {version = "0.5.0", features = ["json"]}
serde = {version = "1.0.195", features = ["derive"]}
serde_json = "1.0.111"
surrealdb = {version = "1.1.1", features = ["kv-rocksdb"]}
tokio = {version = "1.35.1", features = ["full"]}

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
